# PigXiaoEr

./: .gitignore  Cargo.toml  README.md
src/: autocheck.rs  infobox.rs  lib.rs  log_capture.rs  main.rs  mainwindow.rs  setting.rs  slogan.rs  systemtray.rs
ui/: mainwindow.slint
