[package]
name = "PigXiaoEr"
version = "0.1.0"
edition = "2021"


[lib]
name = "PigXiaoEr_lib"
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
opt-level = "z"  # 最小化体积的优化
lto = true        # 链接时优化（彻底移除未使用代码）
codegen-units = 1 # 减少并行编译，提高优化效果
panic = "abort"   # 移除 panic 处理逻辑
strip = true      # 移除调试符号

[build-dependencies]
slint-build = "*"

# ========= 通用依赖（所有平台） =========
[dependencies]
GaiaNet = { path = "../GaiaNet" }
log = "0.4"

# ========= 桌面平台（Windows/macOS/Linux） =========
[target.'cfg(not(target_os = "android"))'.dependencies]
slint = { version = "1.13", features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
i-slint-backend-winit = { version = "1.13", features = ["renderer-femtovg"] }
tray-icon = "*"

# ========= Android 平台 =========
[target.'cfg(target_os = "android")'.dependencies]
slint = { version = "1.13", default-features = false, features = ["std", "backend-android-activity-06", "renderer-skia-opengl","compat-1-2"] }
i-slint-backend-android-activity = { version = "1.13", features = ["native-activity"] }

[package.metadata.android.signing.release]
path = "C:/Users/bzwang/android-release.keystore"
keystore_alias = "pigxiaoeer"
keystore_password = "123456"   # 如果担心明文，可放环境变量
